# coddy-ai

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agent/: ACCEPTANCE_CRITERIA.md  AGENT_MASTER_PROMPT.md  CODE_QUALITY.md  EVALS_AND_METRICS.md  IMPLEMENTATION_ROADMAP.md  PROJECT_CONTEXT.md  PROMPTS.md  README.MD  SECURITY_POLICY.md  SUBAGENTS.md  TARGET_ARCHITECTURE.md  TOOLING_AND_MCP.md  WORKFLOWS.md
.github/workflows/: ci.yml  release-linux.yml
apps/coddy/: Cargo.toml
apps/coddy-electron/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.e2e.config.ts
apps/coddy-electron/src/application/: CommandSender.ts  SessionManager.ts  SettingsStore.ts  index.ts
apps/coddy-electron/src/domain/: index.ts
apps/coddy-electron/src/main/: activeChildProcessTracker.ts  browserWindowSecurity.ts  childProcessJson.ts  coddyBinary.ts  coddySpawnEnv.ts  ipcBridge.ts  localModelManager.ts  main.ts  modelProviders.ts  preload.ts  runtimeCredentialBridge.ts  (+4 more)
apps/coddy/src/: config.rs  main.rs  repl_terminal.rs  shortcut.rs  voice_overlay.rs
crates/coddy-agent/: Cargo.toml
crates/coddy-agent/src/: agent_loop.rs  agent_run_v2.rs  command_guard.rs  context.rs  eval.rs  lib.rs  model.rs  plan_executor.rs  router.rs  runtime.rs  shell_executor.rs  shell_plan.rs  subagent.rs  subagent_executor.rs
crates/coddy-client/: Cargo.toml
crates/coddy-client/src/: lib.rs
crates/coddy-core/: Cargo.toml
crates/coddy-core/src/: command.rs  event.rs  event_broker.rs  event_log.rs  history.rs  json_value_wire.rs  lib.rs  permission.rs  repl_shell.rs  session.rs  tool.rs
crates/coddy-core/tests/: contracts.rs
crates/coddy-ipc/: Cargo.toml
crates/coddy-ipc/src/: lib.rs
crates/coddy-ipc/tests/: repository_boundaries.rs
crates/coddy-runtime/: Cargo.toml
crates/coddy-runtime/src/: lib.rs
crates/coddy-runtime/tests/: runtime_fixture.rs
crates/coddy-voice-input/: Cargo.toml
crates/coddy-voice-input/src/: lib.rs  overlay.rs
docs/: IMPLEMENTATION_PLAN.md  agentic-eval-benchmark-strategy.md  coding-agent-capability-review.md
docs/repl/: README.md  architecture.md  backend-contracts.md  backend-next-steps.md  coddy-client.md  coddy-decoupling-plan.md  coding-agent-reference-analysis.md  live-project-battery-2026-05-03.md  multiagent-hardness-eval.md  repository-split-manifest.md
repl_ui/configuration_settings_modal/: code.html
scripts/: guard_no_secrets.sh  install.sh  package_linux.sh  run_coddy_patch_task_battery.sh  run_live_project_battery.sh  run_swebench_official.sh  test_guard_no_secrets.sh  test_install_local.sh  test_live_project_battery_summary.sh  test_patch_task_battery_apply_recount.sh
(+86 files in other folders)
