[package]
name = "coddy"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gtk-overlay = ["coddy-voice-input/gtk-overlay"]

[dependencies]
coddy-agent.workspace = true
coddy-client.workspace = true
coddy-core.workspace = true
coddy-ipc.workspace = true
coddy-runtime.workspace = true
coddy-voice-input.workspace = true
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
