[package]
name = "coddy-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
coddy-agent.workspace = true
coddy-core.workspace = true
coddy-ipc.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
coddy-client.workspace = true
